--- a/mkdir.yml
+++ b/mkdir.yml
@@ -3,8 +3,8 @@ name: Monitor AWS Resources
   tasks:
     - name: Fetch EC2 facts
       ec2_instance_facts:
-        aws_access_key: "AKIAT5E7S7ABTJQIDVXI" 
-        aws_secret_key: "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" 
+        aws_access_key: " " 
+        aws_secret_key: " " 
         region: "us-east-1"
       register: ec2_facts
 
